Bug 972319, part 1 - Add new API JS::AutoSaveExceptionState as a replacement for JS_SaveExceptionState. r=luke.